8338766: [lw5] remove option enableNullRestrictedTypes and make null-restricted types a preview feature